--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30273
 ms.assetid: f10c4f5f-6176-4dba-99a9-b58f3b390fba
-ms.openlocfilehash: 08f4ab2fd60a895e22b27bc72c995c88344232fb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3180653d948e4a4c78e8cad98cb4f5718ec250df
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784159"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629360"
 ---
-# <a name="ltspecifiergt-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="4fe22-102">'&lt;지정자&gt;' 인터페이스 속성 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="4fe22-102">'&lt;specifier&gt;' is not valid on an interface property declaration</span></span>
-<span data-ttu-id="4fe22-103">인터페이스 내의 `Property` 문에는 `Implements`와 같은 잘못된 키워드가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4fe22-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="4fe22-104">인터페이스는 멤버를 정의할 수만 있고 구현할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="4fe22-104">An interface can only define members, not implement them.</span></span>  
+# <a name="ltspecifiergt-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="a6543-102">'&lt;지정자&gt;' 인터페이스 속성 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="a6543-102">'&lt;specifier&gt;' is not valid on an interface property declaration</span></span>
+<span data-ttu-id="a6543-103">인터페이스 내의 `Property` 문에는 `Implements`와 같은 잘못된 키워드가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a6543-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="a6543-104">인터페이스는 멤버를 정의할 수만 있고 구현할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a6543-104">An interface can only define members, not implement them.</span></span>  
   
- <span data-ttu-id="4fe22-105">**오류 ID:** BC30273</span><span class="sxs-lookup"><span data-stu-id="4fe22-105">**Error ID:** BC30273</span></span>  
+ <span data-ttu-id="a6543-105">**오류 ID:** BC30273</span><span class="sxs-lookup"><span data-stu-id="a6543-105">**Error ID:** BC30273</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4fe22-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4fe22-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a6543-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a6543-106">To correct this error</span></span>  
   
--   <span data-ttu-id="4fe22-107">선언문에서 잘못된 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="4fe22-107">Remove the invalid keyword from the declaration statement.</span></span>  
+-   <span data-ttu-id="a6543-107">선언문에서 잘못된 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="a6543-107">Remove the invalid keyword from the declaration statement.</span></span>  
   
--   <span data-ttu-id="4fe22-108">인터페이스 멤버의 구현을 해당 인터페이스를 구현하는 클래스로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="4fe22-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
+-   <span data-ttu-id="a6543-108">인터페이스 멤버의 구현을 해당 인터페이스를 구현하는 클래스로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="a6543-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4fe22-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="4fe22-109">See Also</span></span>  
- [<span data-ttu-id="4fe22-110">Interface 문</span><span class="sxs-lookup"><span data-stu-id="4fe22-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
- [<span data-ttu-id="4fe22-111">Implements 문</span><span class="sxs-lookup"><span data-stu-id="4fe22-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a><span data-ttu-id="a6543-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="a6543-109">See also</span></span>
+- [<span data-ttu-id="a6543-110">Interface 문</span><span class="sxs-lookup"><span data-stu-id="a6543-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="a6543-111">Implements 문</span><span class="sxs-lookup"><span data-stu-id="a6543-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
