--- a/docs/visual-basic/misc/bc30545.md
+++ b/docs/visual-basic/misc/bc30545.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30545
 ms.assetid: df271c05-1e7a-44e8-bf53-79f06ef916ab
-ms.openlocfilehash: 5709d04d4f99fbae626c1b630c1d42c26ddaf0cb
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: aa58d300dc60b7cac3019c0cd8a17a48639e8452
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33608458"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54638689"
 ---
-# <a name="property-access-must-assign-to-the-property-or-use-its-value"></a><span data-ttu-id="d5f4b-102">속성 액세스를 속성에 할당하거나 속성 액세스에서 속성 값을 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d5f4b-102">Property access must assign to the property or use its value</span></span>
-<span data-ttu-id="d5f4b-103">속성에 할당하거나 해당 값을 사용하지 않고 속성에 액세스하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="d5f4b-103">You have tried to access a property without assigning to it or using its value.</span></span>
+# <a name="property-access-must-assign-to-the-property-or-use-its-value"></a><span data-ttu-id="ec856-102">속성 액세스를 속성에 할당하거나 속성 액세스에서 속성 값을 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ec856-102">Property access must assign to the property or use its value</span></span>
+<span data-ttu-id="ec856-103">속성에 할당하거나 해당 값을 사용하지 않고 속성에 액세스하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="ec856-103">You have tried to access a property without assigning to it or using its value.</span></span>
   
- <span data-ttu-id="d5f4b-104">**오류 ID:** BC30545</span><span class="sxs-lookup"><span data-stu-id="d5f4b-104">**Error ID:** BC30545</span></span>  
+ <span data-ttu-id="ec856-104">**오류 ID:** BC30545</span><span class="sxs-lookup"><span data-stu-id="ec856-104">**Error ID:** BC30545</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d5f4b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d5f4b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ec856-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ec856-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d5f4b-106">속성에 값을 할당 합니다.</span><span class="sxs-lookup"><span data-stu-id="d5f4b-106">Assign a value to the property.</span></span>  
+-   <span data-ttu-id="ec856-106">속성에 값을 할당 합니다.</span><span class="sxs-lookup"><span data-stu-id="ec856-106">Assign a value to the property.</span></span>  
   
-     <span data-ttu-id="d5f4b-107">\- 또는 -</span><span class="sxs-lookup"><span data-stu-id="d5f4b-107">\- or -</span></span>  
+     <span data-ttu-id="ec856-107">\- 또는 -</span><span class="sxs-lookup"><span data-stu-id="ec856-107">\- or -</span></span>  
   
--   <span data-ttu-id="d5f4b-108">속성의 값을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="d5f4b-108">Use the value of the property.</span></span>  
+-   <span data-ttu-id="ec856-108">속성의 값을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="ec856-108">Use the value of the property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d5f4b-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d5f4b-109">See Also</span></span>  
- [<span data-ttu-id="d5f4b-110">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="d5f4b-110">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- [<span data-ttu-id="d5f4b-111">할당 연산자</span><span class="sxs-lookup"><span data-stu-id="d5f4b-111">Assignment Operators</span></span>](../../visual-basic/language-reference/operators/assignment-operators.md)
+## <a name="see-also"></a><span data-ttu-id="ec856-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="ec856-109">See also</span></span>
+- [<span data-ttu-id="ec856-110">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="ec856-110">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="ec856-111">할당 연산자</span><span class="sxs-lookup"><span data-stu-id="ec856-111">Assignment Operators</span></span>](../../visual-basic/language-reference/operators/assignment-operators.md)
