--- a/docs/visual-basic/misc/bc31047.md
+++ b/docs/visual-basic/misc/bc31047.md
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC31047
 ms.assetid: b2d79254-8efd-4b8f-b691-dc168caed207
-ms.openlocfilehash: f63f45efc96c3064d0f642fa65248aa3f324307e
-ms.sourcegitcommit: 22c3c8f74eaa138dbbbb02eb7d720fce87fc30a9
+ms.openlocfilehash: 7276b4a5b88639f7ac454d5895506f9307b0fbb5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/17/2018
-ms.locfileid: "34234251"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629646"
 ---
-# <a name="protected-types-can-only-be-declared-inside-of-a-class"></a><span data-ttu-id="9e5ba-102">Protected 형식은 클래스 내부에서만 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-102">Protected types can only be declared inside of a class</span></span>
-<span data-ttu-id="9e5ba-103">모듈 내의 형식이 `Protected`로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-103">A type within a module was declared as `Protected`.</span></span>
+# <a name="protected-types-can-only-be-declared-inside-of-a-class"></a><span data-ttu-id="51fd3-102">Protected 형식은 클래스 내부에서만 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-102">Protected types can only be declared inside of a class</span></span>
+<span data-ttu-id="51fd3-103">모듈 내의 형식이 `Protected`로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-103">A type within a module was declared as `Protected`.</span></span>
 
-<span data-ttu-id="9e5ba-104">적용 하면이 컴파일러 오류가 발생 하는 가장 일반적으로 `Protected` 중첩 되지 않은 클래스에 대 한 액세스 한정자입니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-104">Most commonly, this compiler error results when you apply the `Protected` access modifier to a non-nested class.</span></span> <span data-ttu-id="9e5ba-105">예를 들어:</span><span class="sxs-lookup"><span data-stu-id="9e5ba-105">For example:</span></span>
+<span data-ttu-id="51fd3-104">적용 하는 경우이 컴파일러 오류가 발생 하는 가장 일반적으로 `Protected` 중첩 되지 않은 클래스에 대 한 액세스 한정자입니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-104">Most commonly, this compiler error results when you apply the `Protected` access modifier to a non-nested class.</span></span> <span data-ttu-id="51fd3-105">예를 들어:</span><span class="sxs-lookup"><span data-stu-id="51fd3-105">For example:</span></span>
 
 ```vb
 Public Class OuterClass     ' Generates compiler error BC31047.
 End Class
 ```
 
-<span data-ttu-id="9e5ba-106">때문에 `Protected` 멤버 액세스 한정자는 속성, 메서드 또는 중첩 된 클래스 처럼 클래스 멤버에만 적용 될 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-106">Because `Protected` is a member access modifier, it can only be applied to a class member, such as a property, method, or nested class.</span></span> 
+<span data-ttu-id="51fd3-106">때문에 `Protected` 는 멤버 액세스 한정자를 클래스 멤버 속성, 메서드 또는 중첩 된 클래스에만 적용 될 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-106">Because `Protected` is a member access modifier, it can only be applied to a class member, such as a property, method, or nested class.</span></span> 
  
- <span data-ttu-id="9e5ba-107">**오류 ID:** BC31047</span><span class="sxs-lookup"><span data-stu-id="9e5ba-107">**Error ID:** BC31047</span></span>  
+ <span data-ttu-id="51fd3-107">**오류 ID:** BC31047</span><span class="sxs-lookup"><span data-stu-id="51fd3-107">**Error ID:** BC31047</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9e5ba-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9e5ba-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="51fd3-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="51fd3-108">To correct this error</span></span>  
   
-1.  <span data-ttu-id="9e5ba-109">클래스 내의 형식을 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-109">Declare the type within a class.</span></span>  
+1.  <span data-ttu-id="51fd3-109">클래스 내의 형식을 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-109">Declare the type within a class.</span></span>  
   
-2.  <span data-ttu-id="9e5ba-110">`Protected` 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="9e5ba-110">Remove the `Protected` modifier.</span></span>  
+2.  <span data-ttu-id="51fd3-110">`Protected` 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="51fd3-110">Remove the `Protected` modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9e5ba-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9e5ba-111">See Also</span></span>  
- [<span data-ttu-id="9e5ba-112">Class 문</span><span class="sxs-lookup"><span data-stu-id="9e5ba-112">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
- [<span data-ttu-id="9e5ba-113">보호됨</span><span class="sxs-lookup"><span data-stu-id="9e5ba-113">Protected</span></span>](../../visual-basic/language-reference/modifiers/protected.md)
+## <a name="see-also"></a><span data-ttu-id="51fd3-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="51fd3-111">See also</span></span>
+- [<span data-ttu-id="51fd3-112">Class 문</span><span class="sxs-lookup"><span data-stu-id="51fd3-112">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="51fd3-113">보호됨</span><span class="sxs-lookup"><span data-stu-id="51fd3-113">Protected</span></span>](../../visual-basic/language-reference/modifiers/protected.md)
