--- a/docs/visual-basic/misc/bc31068.md
+++ b/docs/visual-basic/misc/bc31068.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31068
 ms.assetid: 5d62515b-0678-449a-983b-697e15aac621
-ms.openlocfilehash: 5cf39654bff68b61f992bbc315627cea003414c6
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 85ee2391c00af26445ce308d721fc0408a943d22
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772823"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54628333"
 ---
-# <a name="delegate-in-an-interface-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="9372b-102">인터페이스의 대리자를 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="9372b-102">Delegate in an interface cannot be declared '&lt;specifier&gt;'</span></span>
-<span data-ttu-id="9372b-103">잘못된 한정자가 인터페이스에서 선언된 대리자로 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="9372b-103">An invalid modifier was specified with a delegate declared in an interface.</span></span>  
+# <a name="delegate-in-an-interface-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="8313a-102">인터페이스의 대리자를 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="8313a-102">Delegate in an interface cannot be declared '&lt;specifier&gt;'</span></span>
+<span data-ttu-id="8313a-103">잘못된 한정자가 인터페이스에서 선언된 대리자로 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8313a-103">An invalid modifier was specified with a delegate declared in an interface.</span></span>  
   
- <span data-ttu-id="9372b-104">**오류 ID:** BC31068</span><span class="sxs-lookup"><span data-stu-id="9372b-104">**Error ID:** BC31068</span></span>  
+ <span data-ttu-id="8313a-104">**오류 ID:** BC31068</span><span class="sxs-lookup"><span data-stu-id="8313a-104">**Error ID:** BC31068</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9372b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9372b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8313a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8313a-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="9372b-106">`Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`및 `Overridable`과 같은 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="9372b-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, and `Overridable`.</span></span>  
+1.  <span data-ttu-id="8313a-106">`Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`및 `Overridable`과 같은 한정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="8313a-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, and `Overridable`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9372b-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9372b-107">See Also</span></span>  
- [<span data-ttu-id="9372b-108">인터페이스</span><span class="sxs-lookup"><span data-stu-id="9372b-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
- 
+## <a name="see-also"></a><span data-ttu-id="8313a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="8313a-107">See also</span></span>
+- [<span data-ttu-id="8313a-108">인터페이스</span><span class="sxs-lookup"><span data-stu-id="8313a-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+
