--- a/docs/visual-basic/misc/bc33013.md
+++ b/docs/visual-basic/misc/bc33013.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC33013
 ms.assetid: bfd805f4-e30e-4553-9cb7-2690595f0480
-ms.openlocfilehash: 8923f19572b603a822ca0be7462e1771a440a116
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 81f07a77ef5b82adcd52e225749fa69e21e3205d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761721"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54640188"
 ---
-# <a name="operators-cannot-be-declared-ltkeywordgt"></a><span data-ttu-id="630d6-102">연산자를 선언할 수 없습니다. '&lt;키워드&gt;'</span><span class="sxs-lookup"><span data-stu-id="630d6-102">Operators cannot be declared '&lt;keyword&gt;'</span></span>
-<span data-ttu-id="630d6-103">연산자가 연산자 정의에 유효하지 않은 키워드로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-103">An operator is declared with a keyword that is not valid for operator definitions.</span></span>  
+# <a name="operators-cannot-be-declared-ltkeywordgt"></a><span data-ttu-id="fc5c0-102">연산자를 선언할 수 없습니다. '&lt;키워드&gt;'</span><span class="sxs-lookup"><span data-stu-id="fc5c0-102">Operators cannot be declared '&lt;keyword&gt;'</span></span>
+<span data-ttu-id="fc5c0-103">연산자가 연산자 정의에 유효하지 않은 키워드로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-103">An operator is declared with a keyword that is not valid for operator definitions.</span></span>  
   
- <span data-ttu-id="630d6-104">모든 연산자 선언 해야 둘 다로 [공개](../../visual-basic/language-reference/modifiers/public.md) 하 고 [공유](../../visual-basic/language-reference/modifiers/shared.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-104">Every operator must be declared as both [Public](../../visual-basic/language-reference/modifiers/public.md) and [Shared](../../visual-basic/language-reference/modifiers/shared.md).</span></span> <span data-ttu-id="630d6-105">또한 변환 연산자는 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)로 선언됩니다(둘 다 함께는 불가능).</span><span class="sxs-lookup"><span data-stu-id="630d6-105">In addition, a conversion operator must be declared with either [Widening](../../visual-basic/language-reference/modifiers/widening.md) or [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md), but not both.</span></span> <span data-ttu-id="630d6-106">연산자 정의는 선택적으로 [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) 또는 [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) 키워드를 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-106">An operator definition can optionally include the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) or [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keywords.</span></span> <span data-ttu-id="630d6-107">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)에 다른 모든 키워드는 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-107">No other keywords are permitted in an [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md).</span></span>  
+ <span data-ttu-id="fc5c0-104">모든 연산자 선언 해야 둘 다로 [공개](../../visual-basic/language-reference/modifiers/public.md) 하 고 [공유](../../visual-basic/language-reference/modifiers/shared.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-104">Every operator must be declared as both [Public](../../visual-basic/language-reference/modifiers/public.md) and [Shared](../../visual-basic/language-reference/modifiers/shared.md).</span></span> <span data-ttu-id="fc5c0-105">또한 변환 연산자는 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)로 선언됩니다(둘 다 함께는 불가능).</span><span class="sxs-lookup"><span data-stu-id="fc5c0-105">In addition, a conversion operator must be declared with either [Widening](../../visual-basic/language-reference/modifiers/widening.md) or [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md), but not both.</span></span> <span data-ttu-id="fc5c0-106">연산자 정의는 선택적으로 [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) 또는 [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) 키워드를 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-106">An operator definition can optionally include the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) or [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keywords.</span></span> <span data-ttu-id="fc5c0-107">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)에 다른 모든 키워드는 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-107">No other keywords are permitted in an [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md).</span></span>  
   
- <span data-ttu-id="630d6-108">**오류 ID:** BC33013</span><span class="sxs-lookup"><span data-stu-id="630d6-108">**Error ID:** BC33013</span></span>  
+ <span data-ttu-id="fc5c0-108">**오류 ID:** BC33013</span><span class="sxs-lookup"><span data-stu-id="fc5c0-108">**Error ID:** BC33013</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="630d6-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="630d6-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fc5c0-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fc5c0-109">To correct this error</span></span>  
   
--   <span data-ttu-id="630d6-110">연산자 정의에서 잘못된 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-110">Remove the invalid keyword from the operator definition.</span></span>  
+-   <span data-ttu-id="fc5c0-110">연산자 정의에서 잘못된 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-110">Remove the invalid keyword from the operator definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="630d6-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="630d6-111">See Also</span></span>  
- [<span data-ttu-id="630d6-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="630d6-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="630d6-113">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="630d6-113">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="630d6-114">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="630d6-114">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="fc5c0-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="fc5c0-111">See also</span></span>
+- [<span data-ttu-id="fc5c0-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="fc5c0-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="fc5c0-113">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="fc5c0-113">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="fc5c0-114">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="fc5c0-114">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
